# husky-rcs

./: .env.example  .gitignore  MIGRATION.md  README.md  cmd_vel_mux.py  compass.yml  configure_robot.sh  example_client.py  husky-control-server.service  husky_rcs.py  install.sh  pyproject.toml  robot.yaml  start.sh
.github/: copilot-instructions.md
launch/: husky_control.launch.py
