[project]
name = "husky-rcs"
version = "0.0.0"
authors = [{ name = "Groupe Carvi", email = "dev@carvi.ai" }]
description = "Husky Robot Control Server - WebSocket to ROS2 bridge for teleoperation"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "websockets >= 15.0.1",
    "asyncio",
    "pyyaml>=6.0.3",
    "numpy>=2.0.2",
]

[dependency-groups]
dev = ["pytest >=8.1.1", "ruff >=0.9.1"]

[project.scripts]
husky-rcs = "husky_rcs.main:main"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]
